# splitpay

./: .gitignore  README.md  deploy.sh  package-lock.json  package.json
.github/workflows/: cd.yml  ci.yml
backend/: package.json
backend/src/: index.ts
contracts/: Cargo.toml
contracts/split_contract/: Cargo.toml
contracts/split_contract/src/: lib.rs  test.rs
contracts/src/: lib.rs  test.rs
contracts/token_contract/: Cargo.toml
contracts/token_contract/src/: lib.rs
frontend/: index.html  package.json  vercel.json
frontend/src/: App.tsx
