[package]
name = "split-contract"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.soroban]
target = "wasm32-unknown-unknown"

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
token-contract = { path = "../token_contract" }
